--- a/QT/mainwindow.ui
+++ b/QT/mainwindow.ui
@@ -49,6 +49,13 @@
          </property>
         </widget>
        </item>
+       <item>
+        <widget class="QPushButton" name="FreqDomain_1">
+         <property name="text">
+          <string>Frequency Domain</string>
+         </property>
+        </widget>
+       </item>
       </layout>
      </item>
      <item>
@@ -153,7 +160,7 @@
         </font>
        </property>
        <property name="text">
-        <string>Output</string>
+        <string>AM Output</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
